--- a/index.html
+++ b/index.html
@@ -84,22 +84,20 @@
         <div class = "row">
             <div class = "col-md-2">
                     <div class="card-body">
-                            <h5 class="card-title">Player Wins:</h5>
-                            <p class="card-text"></p>
+                            <h5 class="card-title"></h5>
                         <div id = "playerWins"></div></div>
             </div>
             <div class = "col-md-8">
                     <div class="card-body-score">
-                            <h5 class="card-title">Player Score: </h5>
-                            <p class="card-text">.</p></div>
+                            <h5 class="card-title"></h5>
                         <div id = "playerScore"></div>
+                    </div>
             </div>
             <div class = "col-md-2">
                     <div class="card-body">
-                            <h5 class="card-title">Player Losses: </h5>
-                            <p class="card-text">.</p></div>
+                            <h5 class="card-title"></h5>
+                    <div id = "playerLosses"></div>
                     </div>
-                    <div id = "playerScore"></div>
             </div>
         </div>
             <!--d. Player wins/losses.-->
