updates to html and java

--- a/index.html
+++ b/index.html
@@ -80,17 +80,25 @@
     </container1>
     <container2>    
 
-        <!--c. Player Score-->
+         <!--c. Player Score-->
+         <!--d. Player wins/losses.-->
+         <!--f. Player current score-->
         <div class = "row">
             <div class = "col-md-2">
                     <div class="card-body">
                             <h5 class="card-title"></h5>
                         <div id = "playerWins"></div></div>
             </div>
-            <div class = "col-md-8">
+            <div class = "col-md-4">
                     <div class="card-body-score">
                             <h5 class="card-title"></h5>
                         <div id = "playerScore"></div>
+                    </div>
+            </div>
+            <div class = "col-md-4">
+                    <div class="card-body-score">
+                            <h5 class="card-title"></h5>
+                        <div id = "targetNumber"></div>
                     </div>
             </div>
             <div class = "col-md-2">
@@ -100,9 +108,9 @@
                     </div>
             </div>
         </div>
-            <!--d. Player wins/losses.-->
+           
 
-    <!--f. Player current score-->
+    
 
     </container2>
 
