--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             </div>
                     </div>
                     <div class="card">
-                            <img src="assets/images/whitegem.jpg"  class="card-img-top-white" alt="whitegem">
+                            <img src="assets/images/Whitegem.jpg"  class="card-img-top-white" alt="whitegem">
                             <div class="card-body">
                               <h5 class="card-title"><button type="button" class="btn btn-light" id = "white-btn">White Gem:</button></h5>
                               <div id ="card-text-white">____________________</div>
